@@ -1,10 +1,8 @@
 package com.construction_worker_forum_back.validation.accountstatus;
 
-import com.construction_worker_forum_back.validation.role.ValidRole;
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class AccountStatusValidator implements ConstraintValidator<ValidAccountStatus, CharSequence> {
@@ -14,7 +12,7 @@ public class AccountStatusValidator implements ConstraintValidator<ValidAccountS
     public void initialize(ValidAccountStatus annotation) {
         acceptedValues = Stream.of(annotation.enumClass().getEnumConstants())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
